--- a/alumni-node-backend/package.json
+++ b/alumni-node-backend/package.json
@@ -8,7 +8,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
@@ -16,5 +15,6 @@
     "express": "^5.2.1",
     "firebase-admin": "^13.6.1",
     "nodemailer": "^8.0.1"
-  }
+  },
+  "description": ""
 }
